# consecutive_spatial_data

./: README.md  pyproject.toml
config/: double_spatial.toml  example_config.toml
src/consecutive_spatial_data/: __init__.py  main.py
src/consecutive_spatial_data/cli/: app.py
src/consecutive_spatial_data/io/: image.py  omero_annotations.py  write.py
src/consecutive_spatial_data/registration/: __init__.py  _registration.py
src/consecutive_spatial_data/segmentation/: __init__.py  detection.py
src/consecutive_spatial_data/spec/: __init__.py  _constants.py
src/consecutive_spatial_data/utility/: __init__.py  utils.py
